--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           <h2 class="home__current__title_size_h2">40 ГБ, 200 МИНУТ, 50 SMS</h2>
           <div class="home__current__buttons">
             <a
-              href="/tarifii.html"
+              href="praktika/tarifii.html"
               class="home__current__buttons__first__tariff"
             >
               ТАРИФЫ
