--- a/tarifii.html
+++ b/tarifii.html
@@ -25,7 +25,7 @@
     <header class="header">
       <nav class="header__navigation">
         <div class="header__navigation__logo">
-          <img class="header__navigation__logo__mitto" src="/logo/Vector.svg" />
+          <img class="header__navigation__logo__mitto" src="logo/Vector.svg" />
         </div>
         <div class="header__navigation__possibilities">
           <a class="header__navigation__links__text mobi" href="#">ВОЙТИ</a>
