--- a/tarifii.html
+++ b/tarifii.html
@@ -127,7 +127,7 @@
               </div>
             </div>
           </div>
-          <div href="tariff-page.html" class="tariff__box__cart smartphone">
+          <a href="tariff-page.html" class="tariff__box__cart smartphone">
             <!-- карта тарифа -->
             <div class="tariff__box__cart__photo">
               <img
@@ -168,7 +168,7 @@
                 </div>
               </div>
             </div>
-          </div>
+          </a>
           <div class="tariff__box__cart smartphone">
             <!-- карта тарифа -->
             <div class="tariff__box__cart__photo">
